SERVER-62883: Unlock Recipient Service mutex before deleting state